--- a/index.html
+++ b/index.html
@@ -1,125 +1,83 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Play2Earn Arena</title>
-  <style>
-    body{margin:0;font-family:'Segoe UI',Tahoma,Verdana,sans-serif;background:#0b0f19;color:#fff}
-    header{background:linear-gradient(135deg,#6a11cb,#2575fc);padding:50px 20px;text-align:center}
-    header h1{font-size:2.8rem;margin:0}
-    header p{max-width:700px;margin:10px auto}
-    a.btn,button.btn{display:inline-block;padding:14px 30px;background:#00ff99;color:#000;font-weight:bold;border-radius:30px;text-decoration:none;border:none;cursor:pointer}
-    section{padding:50px 20px;max-width:1100px;margin:auto}
-    h2{text-align:center;margin-bottom:30px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px}
-    .card{background:#141a2e;padding:25px;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,.5);text-align:center}
-    footer{background:#050814;text-align:center;padding:40px 20px}
-    .points{text-align:center;font-size:1.2rem;margin:20px}/* Magic Tile Game */
-#tileGame{position:relative;height:420px;background:linear-gradient(180deg,#0f2027,#203a43,#2c5364);border-radius:18px;overflow:hidden}
-.tile{position:absolute;width:80px;height:80px;border-radius:12px;background:rgba(255,255,255,0.15);backdrop-filter:blur(6px);display:flex;align-items:center;justify-content:center;font-size:22px;font-weight:bold;cursor:pointer;animation:float 6s infinite ease-in-out}
-@keyframes float{0%{transform:translateY(0)}50%{transform:translateY(-20px)}100%{transform:translateY(0)}}
-
-.meter{height:26px;background:#222;border-radius:20px;overflow:hidden;margin-top:20px}
-.meter-fill{height:100%;width:0%;background:linear-gradient(90deg,#00ff99,#ff9800)}
-
-.popup{position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;align-items:center;justify-content:center}
-.popup-box{background:#141a2e;padding:30px;border-radius:20px;max-width:350px;text-align:center}
-
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bubble Rewards Arena</title>
+<style>
+body{margin:0;font-family:Arial,Helvetica,sans-serif;background:linear-gradient(180deg,#1a2a6c,#b21f1f,#fdbb2d);color:#fff;overflow:hidden}
+header{padding:15px;text-align:center;font-weight:bold;font-size:20px;background:rgba(0,0,0,.3)}
+#game{position:relative;width:100%;height:calc(100vh - 60px)}
+#bubbleGrid{position:absolute;top:0;left:0;right:0;height:55%;display:flex;flex-wrap:wrap;justify-content:center;padding-top:10px}
+.bubble{width:40px;height:40px;border-radius:50%;margin:4px;display:flex;align-items:center;justify-content:center;font-size:12px;font-weight:bold}
+.red{background:#ff4d4d}.blue{background:#4da6ff}.green{background:#4dff88}.yellow{background:#ffd24d}.purple{background:#c77dff}
+#launcherArea{position:absolute;bottom:0;left:0;right:0;height:45%;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;padding-bottom:20px}
+#aimLine{height:120px;width:4px;background:rgba(255,255,255,.6);margin-bottom:10px;border-radius:2px}
+#currentBubble,#nextBubble{width:45px;height:45px;border-radius:50%;margin:5px}
+#launcher{display:flex;align-items:center}
+#hud{display:flex;justify-content:space-between;padding:10px;font-size:14px}
+#meter{height:18px;background:#222;border-radius:10px;overflow:hidden;margin:5px 15px}
+#meterFill{height:100%;width:0%;background:linear-gradient(90deg,#00ff99,#ff9800)}
+#popup{position:fixed;inset:0;background:rgba(0,0,0,.7);display:none;align-items:center;justify-content:center}
+#popupBox{background:#141a2e;padding:25px;border-radius:18px;text-align:center;max-width:320px}
+button{border:none;border-radius:25px;padding:12px 20px;font-weight:bold;cursor:pointer}
+.btn{background:#00ff99;color:#000;margin:5px}
+</style>
 </head>
-<body><header>
-  <h1>Play2Earn Arena</h1>
-  <p>Play games, earn points, and redeem manually via WhatsApp. Entertainment-based reward platform.</p>
-  <a href="#games" class="btn">Start Playing</a>
-</header><div class="points">Your Points: <span id="points">0</span></div><section id="games">
-  <h2>Select a Game</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Tap Coin Game</h3>
-      <p>Tap floating coins to increase your points meter.</p>
-      <a href="#tapgame" class="btn">Play Now</a>
-    </div>
-    <div class="card">
-      <h3>More Games</h3>
-      <p>More games coming soon.</p>
-      <button class="btn" disabled>Locked</button>
+<body>
+<header>Bubble Rewards Arena</header>
+<div id="hud">
+  <div>Shots Left: <span id="shots">39</span></div>
+  <div>⭐ ⭐ ⭐</div>
+</div>
+<div id="meter"><div id="meterFill"></div></div>
+<div id="game">
+  <div id="bubbleGrid"></div>
+  <div id="launcherArea">
+    <div id="aimLine"></div>
+    <div id="launcher">
+      <div id="currentBubble"></div>
+      <div id="nextBubble"></div>
     </div>
   </div>
-</section><section id="tapgame">
-  <h2>Tap Coin Game</h2>
-  <p style="text-align:center">Tap the magic tiles. Progress never drops, but gains reduce as you approach rewards.</p>  <div id="tileGame"></div>  <div class="meter">
-    <div class="meter-fill" id="meterFill"></div>
-  </div>  <p style="text-align:center;margin-top:10px">Meter Value: <span id="meterValue">0</span></p>  <div class="card" style="margin-top:25px">
-    <h3>Reward Levels (Manual)</h3>
-    <p>1,000,000 points → ₵5 Airtime</p>
-    <p>4,000,000 points → ₵7 Airtime</p>
-    <p>6,000,000 points → ₵10 Airtime</p>
-    <a class="btn" href="https://wa.me/233547740795" target="_blank">Redeem on WhatsApp</a>
+</div>
+<div id="popup">
+  <div id="popupBox">
+    <h3>🎉 Redeem Available</h3>
+    <p>You reached a reward level.</p>
+    <button class="btn" onclick="redeem()">Redeem Now</button><br>
+    <button class="btn" style="background:#555;color:#fff" onclick="closePopup()">Continue</button>
   </div>
-</section><div class="popup" id="rewardPopup">
-  <div class="popup-box">
-    <h3>🎉 Reward Reached!</h3>
-    <p>You have reached a redeemable level.</p>
-    <button class="btn" onclick="redeemNow()">Redeem Now</button><br/><br/>
-    <button class="btn" style="background:#555;color:#fff" onclick="closePopup()">Continue Playing</button>
-  </div>
-</div><footer>
-  <p>&copy; 2025 Play2Earn Arena</p>
-  <p>Support: 0547740795</p>
-</footer><script>
-  let points = parseInt(localStorage.getItem('points') || 0);
-  let meter = parseInt(localStorage.getItem('meter') || 0);
-  const maxMeter = 6000000;
+</div>
+<audio id="bgm" loop src="https://cdn.pixabay.com/audio/2022/03/15/audio_4c9e7e5f3f.mp3"></audio>
+<audio id="tapSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_7c7d3e3a34.mp3"></audio>
+<script>
+const colors=['red','blue','green','yellow','purple'];
+let shots=39;
+let meter=parseInt(localStorage.getItem('meter')||0);
+const maxMeter=6000000;
+const rewards=[1000000,4000000,6000000];
+const grid=document.getElementById('bubbleGrid');
+const shotsEl=document.getElementById('shots');
+const meterFill=document.getElementById('meterFill');
+const popup=document.getElementById('popup');
+const bgm=document.getElementById('bgm');
+const tapSound=document.getElementById('tapSound');bgm.volume=0.3; bgm.play();
 
-  const pointsEl = document.getElementById('points');
-  const meterEl = document.getElementById('meterValue');
-  const fillEl = document.getElementById('meterFill');
-  const gameArea = document.getElementById('tileGame');
-  const popup = document.getElementById('rewardPopup');
+function randColor(){return colors[Math.floor(Math.random()*colors.length)]}
 
-  const rewardLevels = [1000000,4000000,6000000];
+function initGrid(){for(let i=0;i<60;i++){const b=document.createElement('div');b.className='bubble '+randColor();grid.appendChild(b)}}
 
-  function updateUI(){
-    pointsEl.innerText = points;
-    meterEl.innerText = meter;
-    fillEl.style.width = Math.min((meter/maxMeter)*100,100) + '%';
-    localStorage.setItem('points',points);
-    localStorage.setItem('meter',meter);
+let current=randColor(); let next=randColor(); function drawLauncher(){currentBubble.className=current;nextBubble.className=next}
 
-    if(rewardLevels.includes(meter)){
-      popup.style.display='flex';
-    }
-  }
+function updateMeter(){meterFill.style.width=Math.min(meter/maxMeter*100,100)+'%';localStorage.setItem('meter',meter);if(rewards.includes(meter))popup.style.display='flex'}
 
-  function spawnTile(){
-    const tile = document.createElement('div');
-    tile.className = 'tile';
-    tile.innerText = '💎';
-    tile.style.left = Math.random()*(gameArea.clientWidth-80)+'px';
-    tile.style.top = Math.random()*(gameArea.clientHeight-80)+'px';
+function shoot(){if(shots<=0)return;shots--;shotsEl.textContent=shots;tapSound.play();let gain=12000;if(meter>800000)gain=6000;if(meter>3000000)gain=2500;if(meter>5000000)gain=800;meter+=gain;updateMeter();current=next;next=randColor();drawLauncher()}
 
-    tile.onclick = ()=>{
-      let gain = 12000;
-      if(meter > 800000) gain = 6000;
-      if(meter > 3000000) gain = 2500;
-      if(meter > 5000000) gain = 800;
-      meter += gain;
-      points += 1;
-      tile.remove();
-      updateUI();
-    };
+function redeem(){window.open('https://wa.me/233547740795','_blank')} function closePopup(){popup.style.display='none'}
 
-    gameArea.appendChild(tile);
-    setTimeout(()=>tile.remove(),4000);
-  }
+document.getElementById('launcher').onclick=shoot;
 
-  setInterval(()=>{
-    spawnTile();
-  },900);
+initGrid();drawLauncher();updateMeter(); </script>
 
-  function closePopup(){popup.style.display='none'}
-  function redeemNow(){window.open('https://wa.me/233547740795','_blank')}
-
-  updateUI();
-</script></body>
-</html>
+</body>
+</html>you 
